@@ -91,6 +91,8 @@ namespace Orthanc
     void RestApiGet(const void* parameters,
                     bool afterPlugins);
 
+    void RestApiGet2(const void* parameters);
+
     void RestApiPostPut(bool isPost, 
                         const void* parameters,
                         bool afterPlugins);
